# krisha_monitoring

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 32839c6e60c9_initial_schema.py  556673d599e2_add_analytics.py  5c0eebe028d0_add_search_configs.py  a1b2c3d4e5f6_add_telegram_users_and_favorites.py  c8f2a1b3d4e5_add_apartment_scores.py  d9e8f7a6b5c4_add_search_config_complexes.py
app/: config.py  database.py  logging_config.py  main.py
app/analyzer/: deal_analyzer.py  financial_model.py  investment_scorer.py  market_analytics.py  report_builder.py  scoring_service.py  seller_scorer.py  types.py
app/models/: __init__.py  analytics.py  apartment.py  apartment_score.py  enums.py  notification.py  price_history.py  residential_complex.py  search_config.py  seller.py  telegram.py  (+2 more)
docs/: plan-v2.md  plan.md  tz.md
tests/: conftest.py  test_analytics_job.py  test_analytics_repo.py  test_apartment_filter.py  test_config.py  test_deal_analyzer.py  test_financial_model.py  test_fixture_data.py  test_hunter_job.py  test_investment_scorer.py  test_krisha_scraper_extract.py  test_listing_urls.py  test_logging.py  test_market_analytics.py  test_notifications.py  test_parser.py  test_report_builder.py  test_repositories.py  test_scheduler_status.py  test_score_repo.py  test_scoring_job.py  test_scoring_service.py  test_search_config_complexes.py  test_search_config_repo.py  test_search_filters.py  test_seller_scorer.py  test_settings_validation.py  test_telegram_handlers.py
(+41 files in other folders)
